--- a/listing-detail.html
+++ b/listing-detail.html
@@ -26,7 +26,11 @@
     <p id="listing-price"></p>
     
     <!-- Map -->
-    <div id="listing-map" style="width:100%;height:300px;margin-top:10px;"></div>
+   <!-- Map & Directions -->
+<div id="listing-map" style="width:100%;height:400px;margin-top:10px;"></div>
+<div id="directions-panel" style="margin-top:10px; background:#fff; padding:10px; border-radius:8px;"></div>
+<button id="get-directions">Get Directions From My Location</button>
+</div>
 
     <!-- Reviews -->
     <h3>Reviews</h3>
