--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#travel-planner">Travel Planner</a></li>
                     <li><a href="#stories">Stories</a></li>
                     <li><a href="#partner">Partner With Us</a></li>
-                    <li><a href="#login">Login/Register</a></li><button onclick="window.location.href='login.html'">Login / Register</button>
+                    <button onclick="window.location.href='login.html'">Login / Register</button>
                 </ul>
             </nav>
         </div>
